# airside-operation-center

./: README.md  config = ConnectionConfiguration(command_timeout=None, statement_cache_size=100, max_cached_statement_lifetime=300, max_cacheable_statement_size=15360)  docker-compose.yml
backend/: .env  Dockerfile  README.md  backend_check.txt  config,  demo_test_results.txt  demo_test_results_utf8.txt  error_log.txt  final_error.txt  init_db.py  pyproject.toml  repro.py  run_tests_wrapper.py  schema.sql  test_dashboard_output.txt  test_dashboard_output_clean.txt  test_final.txt  test_patch_results.txt  test_results.txt  test_results_all.txt  test_results_debug.txt  test_wrapper_output.txt
backend/antigravity/00_index/: inventory.json
backend/antigravity/02_services/: service_catalog.md
backend/antigravity/03_api/: endpoints.md  openapi.snapshot.json
backend/antigravity/05_results/: coverage.NOT_GENERATED.txt  latest-test-run.md  pytest-console.txt  pytest-junit.xml
backend/antigravity/07_evidence/: environment.txt  postgres-info.txt  redis-info.txt
backend/docs/: openapi.snapshot.json
backend/scripts/: collect_evidence.py  freeze_api.py  freeze_openapi.py  generate_antigravity_docs.ps1  render_docs.py  scan_inventory.py  validate_artifacts.py  verify_tokens.py
backend/src/: main.py
backend/tests/: test_api_contracts.py  test_baggage_visitors.py  test_bootstrap.py  test_consumers.py  test_dashboard.py  test_demo_mode_no_db_calls.py  test_identity_api.py  test_infra.py  test_notifications.py  test_soc_service.py  test_sse.py  test_ticket_service.py
(+155 files in other folders)
